<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="84dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:backgroundTint="#E1ECF6"
                app:cardCornerRadius="20dp"
                app:contentPadding="5dp"
                app:cardElevation="0dp"
                app:strokeColor="#2A4DE8"
                app:strokeWidth="2dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/seller"
                        app:shapeAppearanceOverlay="@style/CircularImageViewShape"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="?attr/colorPrimary"
                        android:paddingHorizontal="7dp"
                        style="@style/Heading4"
                        android:text="@string/seller"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                android:textFontWeight="500"
                style="@style/Heading1"
                android:text="@string/productName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnPrimary"
                style="@style/Heading3"
                android:text="@string/content_text"/>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="390dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/phone"
                    app:shapeAppearanceOverlay="@style/RoundedImageViewShape" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="14dp"
                    android:layout_gravity="bottom"
                    android:backgroundTint="#000"
                    android:textColor="#ffffff"
                    android:alpha="0.5"
                    android:text="@string/productPrice"/>

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="38dp"
                android:textColor="?attr/colorPrimary"
                android:text="@string/specification"
                android:textFontWeight="700"
                style="@style/Heading2" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp">

                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/body"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        style="@style/Heading3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_specs_body"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/Heading3"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp">
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/camera"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        style="@style/Heading3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_specs_camera"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/Heading3"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp">
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/display"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        style="@style/Heading3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_specs_display"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/Heading3"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp">
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/performance"
                        android:textColor="?attr/colorPrimary"
                        android:textFontWeight="700"
                        style="@style/Heading3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:text="@string/content_specs_performance"
                        android:textColor="?attr/colorOnPrimary"
                        style="@style/Heading3"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/fixedButton"
        style="@style/primaryBtn"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#ffffff"
        android:text="@string/buy"/>

</androidx.constraintlayout.widget.ConstraintLayout>